--- a/src/app/components/editor/editableConceptSelect.html
+++ b/src/app/components/editor/editableConceptSelect.html
@@ -15,8 +15,8 @@
   </div>
 
   <div ng-if="ctrl.isEditing()">
-    <button type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectConcept()" translate>Choose concept</button>
-    <button ng-show="!!ctrl.concept" type="button" class="btn btn-default btn-sm" ng-click="ctrl.clearSelection()" translate>Clear selection</button>
+    <button type="button" class="btn btn-action btn-sm" ng-click="ctrl.selectConcept()" translate>Choose concept</button>
+    <button ng-show="!!ctrl.concept" type="button" class="btn btn-action btn-sm" ng-click="ctrl.clearSelection()" translate>Clear selection</button>
   </div>
 
 </div>
