--- a/src/app/components/editor/editableConstraint.html
+++ b/src/app/components/editor/editableConstraint.html
@@ -32,7 +32,7 @@
             </div>
           </div>
 
-          <button type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addItem()" translate>Choose class</button>
+          <button type="button" class="btn btn-action btn-sm" style="display: block" ng-click="ctrl.addItem()" translate>Choose class</button>
         </div>
       </div>
 
