--- a/src/app/components/editor/editableReferenceDataSelect.html
+++ b/src/app/components/editor/editableReferenceDataSelect.html
@@ -9,6 +9,6 @@
   </div>
 
   <div ng-class="{'model-view__sub': !!ctrl.referenceData}" style="margin-bottom: 15px">
-    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.addReferenceData()" translate>Add reference data</button>
+    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-action btn-sm" ng-click="ctrl.addReferenceData()" translate>Add reference data</button>
   </div>
 </div>
