--- a/src/app/components/model/conceptEditorModal.html
+++ b/src/app/components/model/conceptEditorModal.html
@@ -81,6 +81,6 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Close</button>
+    <button type="button" class="btn btn-action" ng-click="ctrl.close()" translate>Close</button>
   </modal-buttons>
 </modal-template>
