--- a/src/app/components/model/searchVocabularyModal.html
+++ b/src/app/components/model/searchVocabularyModal.html
@@ -32,7 +32,7 @@
     </modal-body>
 
     <modal-buttons>
-      <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
+      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
     </modal-buttons>
   </modal-template>
 </div>
