--- a/src/app/components/common/modalTemplate.html
+++ b/src/app/components/common/modalTemplate.html
@@ -1,6 +1,6 @@
 <div class="modal-header" ng-class="headerClass">
-  <h4 class="modal-title ng-binding">
-    <a type="button" title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fa fa-times icon-arrow-right pull-right"></i></a>
+  <h4 class="modal-title">
+    <a title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
     <div ng-transclude="title"></div>
   </h4>
 </div>
@@ -12,7 +12,7 @@
 <div class="modal-footer">
   <div ng-transclude="buttons"></div>
   <div ng-if="defaultButtons">
-    <button class="btn btn-default confirm" type="button" ng-click="$close()" translate>Yes</button>
-    <button class="btn btn-primary" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
+    <button class="btn btn-action confirm" type="button" ng-click="$close()" translate>Yes</button>
+    <button class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
   </div>
 </div>
