--- a/src/app/components/editor/addPropertiesFromClassModal.html
+++ b/src/app/components/editor/addPropertiesFromClassModal.html
@@ -18,12 +18,12 @@
       </div>
     </div>
 
-    <button class="btn btn-default btn-xs" ng-click="ctrl.selectAll()" translate>Select all</button>
-    <button class="btn btn-default btn-xs" ng-click="ctrl.deselectAll()" translate>Deselect all</button>
+    <button class="btn btn-action btn-xs" ng-click="ctrl.selectAll()" translate>Select all</button>
+    <button class="btn btn-action btn-xs" ng-click="ctrl.deselectAll()" translate>Deselect all</button>
   </modal-body>
 
   <modal-buttons>
-    <button class="btn btn-primary confirm" type="button" ng-click="ctrl.confirm()" translate>Yes</button>
-    <button class="btn btn-default" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
+    <button class="btn btn-action confirm" type="button" ng-click="ctrl.confirm()" translate>Yes</button>
+    <button class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
