--- a/src/app/components/editor/choosePredicateTypeModal.html
+++ b/src/app/components/editor/choosePredicateTypeModal.html
@@ -10,6 +10,6 @@
   </modal-body>
 
   <modal-buttons>
-    <button class="btn btn-primary" type="button" ng-click="$close(ctrl.type)" translate>Choose</button>
+    <button class="btn btn-action" type="button" ng-click="$close(ctrl.type)" translate>Choose</button>
   </modal-buttons>
 </modal-template>
