--- a/src/app/components/editor/classView.html
+++ b/src/app/components/editor/classView.html
@@ -3,7 +3,7 @@
     <div ng-if="ctrl.class && ctrl.model">
       <selection-view model="ctrl.model" editable-controller="ctrl" show="ctrl.show">
         <selection-buttons>
-          <button type="button" class="btn btn-default right add-property" ng-click="ctrl.addProperty()" ng-show="ctrl.isEditing()" uib-tooltip="{{'Add property' | translate}}">
+          <button type="button" class="btn btn-action right add-property" ng-click="ctrl.addProperty()" ng-show="ctrl.isEditing()" uib-tooltip="{{'Add property' | translate}}">
             <span class="glyphicon glyphicon-plus"></span>
           </button>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.class" context="ctrl.model"></export>
