--- a/src/app/components/editor/searchClassModal.html
+++ b/src/app/components/editor/searchClassModal.html
@@ -81,9 +81,9 @@
         <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
         <span>{{ctrl.cannotConfirm | translate}}</span>
       </div>
-      <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
+      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
       <button type="button"
-              class="btn btn-default confirm"
+              class="btn btn-action confirm"
               ng-click="ctrl.confirm()"
               ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalClassPending()">
         {{ctrl.textForSelection(ctrl.selection) | translate}}
