--- a/src/app/components/editor/searchPredicateModal.html
+++ b/src/app/components/editor/searchPredicateModal.html
@@ -102,9 +102,9 @@
         <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
         <span>{{ctrl.cannotConfirm | translate}}</span>
       </div>
-      <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
+      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
       <button type="button"
-              class="btn btn-default confirm"
+              class="btn btn-action confirm"
               ng-click="ctrl.confirm()"
               ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalPredicatePending()">
         {{(ctrl.selection.unsaved ? ('Create and use ' + ctrl.selection.type)
