--- a/src/app/components/editor/subjectView.html
+++ b/src/app/components/editor/subjectView.html
@@ -5,7 +5,7 @@
 
       <button ng-if="ctrl.isEditing()"
               type="button"
-              class="btn btn-default pull-right"
+              class="btn btn-action pull-right"
               ng-disabled="!ctrl.entity.inUnstableState"
               ng-click="ctrl.changeSubject()" uib-tooltip="{{'Change concept' | translate}}"><i class="fa fa-repeat"></i></button>
     </div>
@@ -36,7 +36,7 @@
       <div class="row" ng-if="ctrl.isEditing()">
         <div class="col-md-12">
           <button type="button"
-                  class="btn btn-default pull-right"
+                  class="btn btn-action pull-right"
                   ng-disabled="!ctrl.entity.inUnstableState"
                   ng-click="ctrl.changeSubject()" uib-tooltip="{{'Change concept' | translate}}"><i class="fa fa-repeat"></i></button>
         </div>
