--- a/src/app/components/group/addModelModal.html
+++ b/src/app/components/group/addModelModal.html
@@ -28,8 +28,8 @@
   <modal-buttons>
     <error-panel error="ctrl.submitError"></error-panel>
 
-    <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-    <button class="btn btn-default create" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid" translate>Create new</button>
+    <button class="btn btn-link" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
+    <button class="btn btn-action create" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid" translate>Create new</button>
   </modal-buttons>
 </modal-template>
 </form>
