--- a/src/app/components/model/searchNamespaceModal.html
+++ b/src/app/components/model/searchNamespaceModal.html
@@ -25,7 +25,7 @@
       <div class="col-md-6 search-results">
 
         <div class="clearfix" style="margin-bottom: 10px">
-          <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew()">
+          <button type="button" class="btn btn-action btn-md pull-right" ng-click="ctrl.createNew()">
             <span class="glyphicon glyphicon-plus"></span>
             {{'Add new namespace' | translate}}
           </button>
@@ -42,6 +42,6 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
+    <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
