Adapt to bs4 styles

--- a/src/app/components/common/export.html
+++ b/src/app/components/common/export.html
@@ -1,14 +1,33 @@
-<div class="btn-group right" uib-dropdown is-open="exportOpen" ng-hide="ctrl.isEditing()">
-  <button class="btn btn-action" uib-dropdown-toggle uib-tooltip="{{'Export' | translate}}"><i class="fa fa-download"></i>&nbsp;<span class="caret"></span></button>
-  <ul class="dropdown-menu" role="menu">
-    <li role="menuitem" class="dropdown-header" translate>Show</li>
-    <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name">
-      <a target="_blank" ng-href="{{download.hrefRaw}}" ng-click="download.onClick()">{{download.name | translate}}</a>
-    </li>
-    <li role="separator" class="divider"></li>
-    <li role="menuitem" class="dropdown-header" translate>Download</li>
-    <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name">
-      <a target="_self" download="{{download.filename}}" ng-href="{{download.href}}" ng-click="download.onClick()">{{download.name | translate}}</a>
-    </li>
-  </ul>
+<div uib-dropdown class="pull-right" ng-hide="ctrl.isEditing()">
+
+  <button class="btn btn-action dropdown-toggle" uib-dropdown-toggle uib-tooltip="{{'Export' | translate}}">
+    <i class="fa fa-download"></i>
+  </button>
+
+  <div uib-dropdown-menu>
+    <div class="dropdown-header">{{'Show' | translate | uppercase}}</div>
+
+    <a ng-repeat="download in ctrl.downloads track by download.name"
+       class="dropdown-item"
+       target="_blank"
+       ng-href="{{download.hrefRaw}}"
+       ng-click="download.onClick()">
+      {{download.name | translate}}
+    </a>
+
+    <div class="dropdown-divider"></div>
+
+    <div class="dropdown-header">{{'Download' | translate | uppercase}}</div>
+
+    <a ng-repeat="download in ctrl.downloads track by download.name"
+       class="dropdown-item"
+       target="_self"
+       download="{{download.filename}}"
+       ng-href="{{download.href}}"
+       ng-click="download.onClick()">
+      {{download.name | translate}}
+    </a>
+
+  </div>
+
 </div>
