Use names instead of icons in buttons

--- a/src/app/components/common/export.html
+++ b/src/app/components/common/export.html
@@ -1,7 +1,7 @@
 <div uib-dropdown class="pull-right" ng-hide="ctrl.isEditing()">
 
-  <button class="btn btn-action dropdown-toggle" uib-dropdown-toggle uib-tooltip="{{'Export' | translate}}">
-    <i class="fa fa-download"></i>
+  <button class="btn btn-action dropdown-toggle" uib-dropdown-toggle>
+    <span translate>Export</span>
   </button>
 
   <div uib-dropdown-menu>
