Correct variable name which broke in refactoring

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -37,7 +37,7 @@
         <div class="col-md-12">
 
           <app-filter-dropdown class="pull-left"
-                               [options]="$ctrl.contributors"
+                               [options]="$ctrl.organizations"
                                [filter-subject]="$ctrl.organization$"></app-filter-dropdown>
 
           <app-filter-dropdown class="pull-left ml-2"
