Sort button styles

--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -40,9 +40,14 @@
   <div class="col-md-12">
 
     <div class="clearfix">
-      <h4 class="pull-left" style="margin-bottom: 0">{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}
-        <a ng-show="!ctrl.isEditing()" class="btn btn-action btn-xs" uib-btn-checkbox ng-model="ctrl.sortAlphabetically"><i class="fa fa-sort-alpha-asc"></i></a>
-      </h4>
+      <h4 class="pull-left mb-0 mr-2">{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
+      <a ng-show="!ctrl.isEditing()"
+         class="btn btn-secondary-action btn-sm"
+         ng-class="{ active: ctrl.sortAlphabetically }"
+         uib-btn-checkbox
+         ng-model="ctrl.sortAlphabetically">
+        <i class="fa fa-sort-alpha-asc"></i>
+      </a>
       <button-with-options icon-class="glyphicon glyphicon-plus" ng-show="ctrl.isEditing()" options="ctrl.addPropertyActions"></button-with-options>
     </div>
 
